manifest/vm/route/vm_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-httproute
  namespace: vm
spec:
  parentRefs:
    - name: external-http
      namespace: vm
  hostnames:
    - "34.110.238.189.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vm-main-victoria-metrics-cluster-vmauth
          port: 8427
